// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fixtures > ./fixtures/define-component.tsx 1`] = `
"
import { createPropsDefaultProxy as __MACROS_createPropsDefaultProxy } from "/vue-macros/jsx-macros/with-defaults";
import { useAttrs as __MACROS_useAttrs } from "vue";
import { useModel as __MACROS_useModel } from "/vue-macros/jsx-macros/use-model";
import { withAsyncContext as __MACROS_withAsyncContext } from "vue";import { defineComponent, nextTick } from 'vue'

const Comp = defineComponent(
  (__MACROS_props) => {
const __MACROS_default_props = __MACROS_createPropsDefaultProxy(__MACROS_props, {'.bar': 'bar'!});const attrs = __MACROS_useAttrs();
    const foo = $(
      __MACROS_useModel(__MACROS_props, 'foo', {
        validator: (value) => {
          return value === 'foo'
        },
        type: String,
      })!,
    )
    return () => <div>{[foo, __MACROS_default_props.bar, attrs.baz]}</div>
  },
  {props: { 'bar': { required: true }, 'foo': { required: true, validator: (value) => {
          return value === 'foo'
        }, type: String }, 'onUpdate:foo': null, 'fooModifiers': null },inheritAttrs: false, name: 'Comp' },
)

const Comp1 = defineComponent((props: { bar: 'bar'; 'onUpdate:bar': any }) => {
  const foo = __MACROS_useModel(props, 'foo')
  return () => <div>{[foo.value, props['bar'], props['onUpdate:bar']]}</div>
}, { props: { 'bar': null, 'onUpdate:bar': null, 'foo': null, 'onUpdate:foo': null, 'fooModifiers': null } })

const Comp2 = defineComponent(async (__MACROS_props) => {
let __temp, __restore

  ;(
  ([__temp,__restore] = __MACROS_withAsyncContext(() => nextTick())),
  await __temp,
  __restore()
)
  let foo = (
  ([__temp,__restore] = __MACROS_withAsyncContext(() => new Promise((resolve) => {
    setTimeout(() => resolve('foo'), 1000)
  }))),
  __temp = await __temp,
  __restore(),
  __temp
)
  return () => <div>{foo}</div>
})
"
`;

exports[`fixtures > ./fixtures/define-expose.tsx 1`] = `
"
import { useExpose as __MACROS_useExpose } from "/vue-macros/jsx-macros/use-expose";
import { getCurrentInstance as __MACROS_getCurrentInstance } from "vue";export function Comp(__MACROS_props) {
  __MACROS_useExpose(__MACROS_getCurrentInstance(), {
    foo: 1,
  })
  return <div />
}

export const Comp1 = function (props: any) {
  __MACROS_useExpose(__MACROS_getCurrentInstance(), {
    foo: props.foo,
  })
  return <div />
}

export const Comp2 = ({ foo, ...__MACROS_props }: any) => {
  __MACROS_useExpose(__MACROS_getCurrentInstance(), {
    foo,
  })
  return <div />
}
"
`;

exports[`fixtures > ./fixtures/define-model.tsx 1`] = `
"
import { useModel as __MACROS_useModel } from "/vue-macros/jsx-macros/use-model";export const Comp = ({ bar, ...__MACROS_props }: { bar: string }) => {
  const foo = __MACROS_useModel(__MACROS_props, 'foo', { default: bar })
  return <div>{foo.value}</div>
}

export default function (__MACROS_props) {
  const modelValue = $(__MACROS_useModel<string>(__MACROS_props, 'modelValue',)!)
  return (
    <Comp v-model:foo={modelValue} bar="bar">
      {modelValue}
    </Comp>
  )
}
"
`;

exports[`fixtures > ./fixtures/define-slots.tsx 1`] = `
"
import { useSlots as __MACROS_useSlots } from "vue";export const Comp = (__MACROS_props) => {
  const slots = Object.assign<{
    default: () => any
  }>({}, __MACROS_useSlots())
  return <div>{slots.default?.()}</div>
}

export default function (__MACROS_props) {
  const slots = Object.assign({
    default: () => <div>default</div>,
  },__MACROS_useSlots())
  return <div>{slots.default?.()}</div>
}
"
`;

exports[`fixtures > ./fixtures/define-style.tsx 1`] = `
"import "/vue-macros/jsx-macros/define-style/0?scopeId=4e9d5cd0&scoped=true&lang.css";import style1 from "/vue-macros/jsx-macros/define-style/1?scopeId=426a859d&scoped=true&lang.module.scss";import "/vue-macros/jsx-macros/define-style/2?scopeId=63a7910c&scoped=false&lang.scss";import { defineComponent, ref } from 'vue'

export const Comp = (__MACROS_props) => {
  const color = ref('red')
  
  return <div {...{style:{'--4e9d5cd0-color-value': color.value}}} data-v-4e9d5cd0="" class="foo">foo</div>
}

export default defineComponent((__MACROS_props) => {
  const color = ref('red')
  const styles = style1
  return () => (
    <>
      <div {...{style:{'--426a859d-color-value': color.value}}} data-v-426a859d="" class={styles.bar}>foo</div>
      <div {...{style:{'--426a859d-color-value': color.value}}} data-v-426a859d="" class="bar">
        <span data-v-426a859d="">bar</span>
      </div>
    </>
  )
})


"
`;

exports[`react fixtures > ./fixtures/define-expose.tsx 1`] = `
"
import { useImperativeHandle as __MACROS_useImperativeHandle } from "react";
import { forwardRef as __MACROS_forwardRef } from "react";export const Comp = __MACROS_forwardRef(function Comp(__MACROS_props, __MACROS_ref) {
  __MACROS_useImperativeHandle(__MACROS_ref, () =>({
    foo: 1,
  }), [])
  return <div />
})

export const Comp1 = __MACROS_forwardRef(function (props: any, __MACROS_ref) {
  __MACROS_useImperativeHandle(__MACROS_ref, () =>({
    foo: props.foo,
  }), [props.foo])
  return <div />
})

export const Comp2 = __MACROS_forwardRef(({ foo, ...__MACROS_props }: any, __MACROS_ref) => {
  __MACROS_useImperativeHandle(__MACROS_ref, () =>({
    foo,
  }), [foo])
  return <div />
})
"
`;

exports[`react19 fixtures > ./fixtures/define-expose.tsx 1`] = `
"
import { useImperativeHandle as __MACROS_useImperativeHandle } from "react";export function Comp(__MACROS_props) {
  __MACROS_useImperativeHandle(__MACROS_props.ref, () =>({
    foo: 1,
  }), [])
  return <div />
}

export const Comp1 = function (props: any) {
  __MACROS_useImperativeHandle(props.ref, () =>({
    foo: props.foo,
  }), [props.foo])
  return <div />
}

export const Comp2 = ({ foo, ...__MACROS_props }: any) => {
  __MACROS_useImperativeHandle(, () =>({
    foo,
  }), [foo])
  return <div />
}
"
`;

exports[`vue/vapor fixtures > ./fixtures/define-component.tsx 1`] = `
"
import { createPropsDefaultProxy as __MACROS_createPropsDefaultProxy } from "/vue-macros/jsx-macros/with-defaults";
import { useAttrs as __MACROS_useAttrs } from "vue";
import { useModel as __MACROS_useModel } from "/vue-macros/jsx-macros/use-model";
import { withAsyncContext as __MACROS_withAsyncContext } from "vue";import { defineComponent, nextTick } from 'vue'

const Comp = defineComponent(
  (__MACROS_props) => {
const __MACROS_default_props = __MACROS_createPropsDefaultProxy(__MACROS_props, {'.bar': 'bar'!});const attrs = __MACROS_useAttrs();
    const foo = $(
      __MACROS_useModel(__MACROS_props, 'foo', {
        validator: (value) => {
          return value === 'foo'
        },
        type: String,
      })!,
    )
    return <div>{[foo, __MACROS_default_props.bar, attrs.baz]}</div>
  },
  {props: { 'bar': { required: true }, 'foo': { required: true, validator: (value) => {
          return value === 'foo'
        }, type: String }, 'onUpdate:foo': null, 'fooModifiers': null },inheritAttrs: false, name: 'Comp' },
)

const Comp1 = defineComponent((props: { bar: 'bar'; 'onUpdate:bar': any }) => {
  const foo = __MACROS_useModel(props, 'foo')
  return <div>{[foo.value, props['bar'], props['onUpdate:bar']]}</div>
}, { props: { 'bar': null, 'onUpdate:bar': null, 'foo': null, 'onUpdate:foo': null, 'fooModifiers': null } })

const Comp2 = defineComponent(async (__MACROS_props) => {
let __temp, __restore

  ;(
  ([__temp,__restore] = __MACROS_withAsyncContext(() => nextTick())),
  await __temp,
  __restore()
)
  let foo = (
  ([__temp,__restore] = __MACROS_withAsyncContext(() => new Promise((resolve) => {
    setTimeout(() => resolve('foo'), 1000)
  }))),
  __temp = await __temp,
  __restore(),
  __temp
)
  return () => <div>{foo}</div>
})
"
`;

exports[`vue/vapor fixtures > ./fixtures/define-expose.tsx 1`] = `
"
import { useExpose as __MACROS_useExpose } from "/vue-macros/jsx-macros/use-expose";
import { currentInstance as __MACROS_currentInstance } from "vue";export function Comp(__MACROS_props) {
  __MACROS_useExpose(__MACROS_currentInstance, {
    foo: 1,
  })
  return <div />
}

export const Comp1 = function (props: any) {
  __MACROS_useExpose(__MACROS_currentInstance, {
    foo: props.foo,
  })
  return <div />
}

export const Comp2 = ({ foo, ...__MACROS_props }: any) => {
  __MACROS_useExpose(__MACROS_currentInstance, {
    foo,
  })
  return <div />
}
"
`;

exports[`vue/vapor fixtures > ./fixtures/define-model.tsx 1`] = `
"
import { useModel as __MACROS_useModel } from "/vue-macros/jsx-macros/use-model";export const Comp = ({ bar, ...__MACROS_props }: { bar: string }) => {
  const foo = __MACROS_useModel(__MACROS_props, 'foo', { default: bar })
  return <div>{foo.value}</div>
}

export default function (__MACROS_props) {
  const modelValue = $(__MACROS_useModel<string>(__MACROS_props, 'modelValue',)!)
  return (
    <Comp v-model:foo={modelValue} bar="bar">
      {modelValue}
    </Comp>
  )
}
"
`;

exports[`vue/vapor fixtures > ./fixtures/define-slots.tsx 1`] = `
"
import { useSlots as __MACROS_useSlots } from "vue";export const Comp = (__MACROS_props) => {
  const slots = Object.assign<{
    default: () => any
  }>({}, __MACROS_useSlots())
  return <div>{slots.default?.()}</div>
}

export default function (__MACROS_props) {
  const slots = Object.assign({
    default: () => <div>default</div>,
  },__MACROS_useSlots())
  return <div>{slots.default?.()}</div>
}
"
`;

exports[`vue/vapor fixtures > ./fixtures/define-style.tsx 1`] = `
"import "/vue-macros/jsx-macros/define-style/0?scopeId=4e9d5cd0&scoped=true&lang.css";import style1 from "/vue-macros/jsx-macros/define-style/1?scopeId=426a859d&scoped=true&lang.module.scss";import "/vue-macros/jsx-macros/define-style/2?scopeId=63a7910c&scoped=false&lang.scss";import { defineComponent, ref } from 'vue'

export const Comp = (__MACROS_props) => {
  const color = ref('red')
  
  return <div {...{style:{'--4e9d5cd0-color-value': color.value}}} data-v-4e9d5cd0="" class="foo">foo</div>
}

export default defineComponent((__MACROS_props) => {
  const color = ref('red')
  const styles = style1
  return () => (
    <>
      <div {...{style:{'--426a859d-color-value': color.value}}} data-v-426a859d="" class={styles.bar}>foo</div>
      <div {...{style:{'--426a859d-color-value': color.value}}} data-v-426a859d="" class="bar">
        <span data-v-426a859d="">bar</span>
      </div>
    </>
  )
})


"
`;
